# TosterBot

./: Cargo.toml  Dockerfile
src/: main.rs
