[package]
name = "www-bot"
version = "0.1.0"
authors = ["Michal Szaknis <michalszak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = "0.8"
chrono = "0.4"
rand = "0.7.3"
lazy_static = "1.4.0"
regex = "1"
json = "0.12.4"
